src/objects/sfsp__SalesPlan__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AssignmentBehavior__c</fullName>
        <label>Assignment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Non-Exclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__HierarchyReference__c</fullName>
        <description>JSON array of imported hierarchy reference fields columns</description>
        <label>Hierarchy Reference</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Plans</relationshipLabel>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Period__c</fullName>
        <label>Period</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__ReferenceFields__c</fullName>
        <description>JSON array of reference fields</description>
        <label>Reference Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesDataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Data Source</label>
        <referenceTo>sfsp__SalesDataSource__c</referenceTo>
        <relationshipLabel>Sales Plans</relationshipLabel>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmentation</fullName>
                    <default>true</default>
                    <label>Segmentation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>